--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   
     }
-    <link href="css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./assets/css/style.css">
+
 </head>
 <body>
   <div class="particles"></div>
