--- a/index.html
+++ b/index.html
@@ -4,40 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chouchy's Anime Portfolio ✨</title>
-
-  <!-- ✅ base path สำหรับ GitHub Pages (สำคัญมาก!) -->
-  <base href="/Mr.-Chouchy-final/" />
-
-  <!-- ✅ Bootstrap & FontAwesome -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-
-  <!-- ✅ Custom CSS -->
-  <link href="css/style.css" rel="stylesheet" />
-
-  <!-- ✅ เสริม CSS ขนาดภาพ -->
-  <style>
-    img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-    }
-    .profile-photo-container {
-      overflow: hidden;
-      border-radius: 1rem;
-      max-width: 100%;
-    }
-  </style>
+  <link href="style.css" rel="stylesheet" />
 </head>
-
 <body>
   <div class="particles"></div>
 
-  <!-- ✅ Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#top">Chouchy ✨</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -51,39 +28,41 @@
     </div>
   </nav>
 
-  <!-- ✅ Hero Section -->
   <header id="top">
-    <div class="hero-content text-center">
-      <h1 class="hero-title">
-        Hello! I am Chouchy Hang 
+    <div class="hero-content">
+      <h1 class="hero-title">Hello! I am Chouchy Hang 
         <i class="fas fa-star star" style="top: -10px; right: -20px;"></i>
       </h1>
       <p class="hero-subtitle">
-        <i class="fas fa-code"></i> New Frontend Developer | 
-        <i class="fas fa-palette"></i> UI/UX Enthusiast | 
+        <i class="fas fa-code"></i> New Frontend Developer |
+        <i class="fas fa-palette"></i> UI/UX Enthusiast |
         <i class="fas fa-heart heart"></i> Design Lover
       </p>
+      <div class="text-center mt-4">
+        <div class="anime-character">
+          <i class="fas fa-user-astronaut"></i>
+        </div>
+      </div>
       <div class="mt-4">
-        <i class="fas fa-sparkles" style="color: #ffd700; font-size: 1.5rem; margin: 0 10px;"></i>
-        <i class="fas fa-star" style="color: #ff6b6b; font-size: 1.2rem; margin: 0 10px;"></i>
-        <i class="fas fa-heart" style="color: #4ecdc4; font-size: 1.3rem; margin: 0 10px;"></i>
+        <i class="fas fa-sparkles" style="color: #ffd700; font-size: 1.5rem; margin: 0 10px; animation: twinkle 1s infinite;"></i>
+        <i class="fas fa-star" style="color: #ff6b6b; font-size: 1.2rem; margin: 0 10px; animation: twinkle 1.5s infinite;"></i>
+        <i class="fas fa-heart" style="color: #4ecdc4; font-size: 1.3rem; margin: 0 10px; animation: heartbeat 2s infinite;"></i>
       </div>
     </div>
   </header>
 
   <main class="container-fluid px-0">
-    <!-- ✅ About Section -->
     <section id="about" class="container my-5 py-5">
       <h2 class="section-title"><i class="fas fa-user-circle"></i> About me</h2>
       <div class="row align-items-center justify-content-center">
         <div class="col-md-5 text-center mb-4 mb-md-0">
           <div class="profile-photo-container">
-            <img id="profileImage" src="images/1AFF3E42-5128-435D-941F-B682246E40FB.JPG" alt="Chouchy Profile">
+            <img id="profileImage" src="profile.jpg" alt="Chouchy Hang Profile Picture" />
           </div>
         </div>
         <div class="col-md-7">
-          <p class="lead mt-3">ສະບາຍດີ! ຂ້ອຍຊື່ <strong>ຈູ້ຈີ ຫັງ (Chouchy Hang)</strong>...</p>
-          <p>... (ข้อความเหมือนของคุณเดิม) ...</p>
+          <p class="lead mt-3">ສະບາຍດີ! ຂ້ອຍຊື່ <strong>ຈູ້ຈີ ຫັງ (Chouchy Hang)</strong> ກຳລັງສຶກສາກ່ຽວກັບ Frontend Developer ທີ່ຫຼົງໄຫຼໃນການສ້າງສັນ Website ທີ່ສວຍງາມ</p>
+          <p>ຂ້ອຍເຊື່ອວ່າ UI/UX ແລະການໃຊ້ງານຕົວຈິງແມ່ນຫົວໃຈສຳຄັນຂອງການອອກແບບ Web</p>
           <div class="mt-4">
             <span class="badge badge-skill"><i class="fab fa-html5"></i> HTML5</span>
             <span class="badge badge-skill"><i class="fab fa-css3-alt"></i> CSS3</span>
@@ -96,28 +75,24 @@
       </div>
     </section>
 
-    <!-- ✅ Project Section -->
     <section id="projects" class="container my-5 py-5">
-      <h2 class="section-title"><i class="fas fa-folder-open"></i> My Project</h2>
-      <div id="project-list" class="row g-4">
-        <!-- Projects will go here -->
-      </div>
+      <h2 class="section-title"><i class="fas fa-folder-open"></i> My project</h2>
+      <div id="project-list" class="row g-4"></div>
     </section>
 
-    <!-- ✅ Contact Section -->
     <section id="contact" class="container">
       <div class="contact-section">
-        <h2 class="text-center mb-4"><i class="fas fa-envelope"></i> Contact me</h2>
+        <h2 class="text-center mb-4"><i class="fas fa-envelope"></i> Contact me <i class="fas fa-heart heart" style="margin-left: 10px;"></i></h2>
         <form class="needs-validation" novalidate>
           <div class="row">
             <div class="col-md-6 mb-3">
               <label for="name" class="form-label">Name</label>
-              <input type="text" class="form-control" id="name" placeholder="ປ້ອນຊື່ຂອງເຈົ້າ" required>
+              <input type="text" class="form-control" id="name" placeholder="ປ້ອນຊື່ຂອງເຈົ້າ" required />
               <div class="invalid-feedback">ປ້ອນຊື່ຂອງເຈົ້າ</div>
             </div>
             <div class="col-md-6 mb-3">
               <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email" placeholder="ຕົວຢ່າງ@email.com" required>
+              <input type="email" class="form-control" id="email" placeholder="example@email.com" required />
               <div class="invalid-feedback">กรุณาป้อนอีเมลที่ถูกต้อง</div>
             </div>
           </div>
@@ -134,16 +109,19 @@
     </section>
   </main>
 
-  <!-- ✅ Footer -->
-  <footer class="text-center py-4">
-    <p>
-      <i class="fas fa-heart heart"></i> ສ້າງດ້ວຍຄວາມຕັ້ງໃຈ By Chouchy Hang &copy; 2025
-      <i class="fas fa-star star" style="margin-left: 10px;"></i>
-    </p>
+  <footer class="text-center">
+    <div class="container">
+      <p class="mb-0">
+        <i class="fas fa-heart heart"></i> ສ້າງດ້ວຍຄວາມຕັ້ງໃຈ By Chouchy Hang &copy; 2025
+        <i class="fas fa-star star" style="margin-left: 10px;"></i>
+      </p>
+    </div>
   </footer>
 
-  <!-- ✅ Script -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/script.js"></script>
+  
+  <!-- Your custom script (now in root) -->
+  <script src="script.js"></script>
 </body>
 </html>
