--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row align-items-center justify-content-center">
         <div class="col-md-5 text-center mb-4 mb-md-0">
           <div class="profile-photo-container">
-            <img id="profileImage" src="1AFF3E42-5128-435D-941F-B682246E40FB.JPG" alt="Chouchy Hang Profile Picture" />
+            <img id="profileImage" src="juje.jpg" alt="Chouchy Hang Profile Picture" />
           </div>
         </div>
         <div class="col-md-7">
