--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Chouchy's Anime Portfolio ✨</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-  <link href="style.css" rel="stylesheet" />
+  <link href="assets/style.css" rel="stylesheet" />
 </head>
 <body>
   <div class="particles"></div>
@@ -122,6 +122,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   
   <!-- Your custom script (now in root) -->
-  <script src="script.js"></script>
+  <script src="assets/script.js"></script>
 </body>
 </html>
